[package]
name = "meridian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meridian"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate"] }
scraper = "0.19"
url = "2"

dashmap = "5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-cron-scheduler = "0.10"
